# Gatherraa

./: COUPON_SYSTEM_README.md  README.md  run-edge-case-tests.sh
app/backend/: MIGRATION_V1_TO_V2.md  NOTIFICATIONS_README.md  PROPERTY_BASED_TESTING.md  VERSIONING_STRATEGY.md  package-lock.json  package.json
app/backend/src/: app.module.ts  main.ts
app/backend/test/: auth.service.property.spec.ts  events.service.property.spec.ts  fuzz.input-validation.spec.ts  invariants.consistency.spec.ts  setup.ts  users.service.property.spec.ts
app/frontend/: next.config.ts  package-lock.json  package.json
app/frontend/app/: globals.css
app/frontend/components/: Analyticswidget.tsx  AppErrorBoundary.jsx  InfiniteScrollFeed.jsx  Shareevent.tsx
app/frontend/config/: route-guard.config.ts  (+1 more)
contract/: FUZZING_IMPLEMENTATION_PLAN.md  TASK3_COMPLETE.md  TASK3_FUZZING_SUMMARY.md
contract/fuzz/: Cargo.toml  README.md
contract/fuzz/fuzz_targets/: atomic_ops_fuzzer.rs  escrow_create_fuzzer.rs  ticket_mint_fuzzer.rs
contract/fuzz/src/: lib.rs
contract/governance_contract/: Cargo.toml
contract/storage_initialization_contract/: Cargo.toml
docs/: BULLMQ_TASK_QUEUE_GUIDE.md
observability/: README.md  docker-compose.observability.yml
observability/prometheus/: alert.rules.yml  prometheus.yml
observability/promtail/: config.yml
tests/: EDGE_CASE_TESTS.md  PERFORMANCE_TESTING_PLAN.md
tests/k6-load-tests/: README.md  api-benchmark.js  edge-case-tests.js  high-load-test.js  memory-profile.js  payment-stress.js  regression-test.js  run-performance-tests.sh
(+122 files in other folders)
